@@ -398,7 +398,7 @@
       <module id="gnome-system-monitor" branch="gnome-2-18"/>
       <module id="gnome-system-tools"/>
       <module id="gnome-terminal"/>
-      <module id="gnome-themes"/>
+      <module id="gnome-themes" branch="gnome-2-18"/>
       <module id="gnome-user-docs"/>
       <module id="gnome-utils" branch="gnome-2-18"/>
       <module id="gnome-volume-manager"/>
@@ -421,7 +421,7 @@
       <module id="sound-juicer" branch="gnome-2-16"/>
       <module id="tomboy" branch="gnome-2-18"/>
       <module id="totem" branch="gnome-2-18"/>
-      <module id="vino"/>
+      <module id="vino" branch="gnome-2-18"/>
       <module id="vte"/>
       <module id="yelp"/>
       <module id="zenity"/>
