@@ -1,6 +1,12 @@
 2007-04-09  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
+	* releases.xml.in: Branched gnome-themes and vino for 2.18.
+	Corrected link for gnome-desktop lgpl, fixes bug #427840.
+
+2007-04-09  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in:
 	* releases.xml.in: Branched gnome-system-monitor for 2.18.
 
 2007-04-02  Claude Paroz  <claude@2xlibre.net>
